--- a/package.json
+++ b/package.json
@@ -21,11 +21,7 @@
     "web-vitals": "^2.1.0"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "cross-spawn": "^7.0.5",
-    "nth-check": "^2.0.1",
-    "postcss": "^8.4.31",
-    "@eslint/plugin-kit": "^0.2.3"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   },
   "scripts": {
     "start": "react-scripts start",
